# computer-club

./: CMakeLists.txt  README.md  computer_club  run_all_tests.sh
data/: test2_zero_computers.txt  test3_one_client.txt  test4_bad_id.txt  test5_closed_club.txt  test6_all_leave.txt  test7_queue_overflow.txt
include/: solver.h
samples/: main.cpp
test/: test_cases.cpp
